<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.diagnosis.DiagnosisFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:liftOnScroll="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <ImageButton
                android:id="@+id/img_btn_back"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/arrow_back"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_regular"
                android:letterSpacing="0.02"
                android:text="@string/diagnosis"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@id/img_btn_back"
                app:layout_constraintBottom_toBottomOf="@id/img_btn_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_chest_xray_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/oswald_regular"
                android:letterSpacing="0.02"
                android:text="@string/chest_xray_photo"
                android:textColor="@color/dark_green"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_uploaded_image"
                android:layout_width="match_parent"
                android:layout_height="328dp"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_chest_xray_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardElevation="0dp"
                app:cardCornerRadius="19dp">

                <ImageView
                    android:id="@+id/iv_uploaded_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:contentDescription="@string/uploaded_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_image_placeholder"/>

            </com.google.android.material.card.MaterialCardView>

            <ImageButton
                android:id="@+id/img_btn_gallery"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/gallery"
                android:src="@drawable/ic_gallery"
                app:layout_constraintBottom_toBottomOf="@+id/card_uploaded_image"
                app:layout_constraintEnd_toEndOf="@id/card_uploaded_image"/>

            <TextView
                android:id="@+id/tv_patient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/oswald_regular"
                android:letterSpacing="0.02"
                android:text="@string/patient_name"
                android:textColor="@color/dark_green"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/card_uploaded_image"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_patient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_patient_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.App.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_patient_name"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints=""
                    android:fontFamily="@font/worksans_regular"
                    android:hint="@string/enter_patient_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:letterSpacing="0.02"
                    android:textSize="12sp"
                    android:textColor="@color/dark_blue"
                    android:textColorHint="@color/light_blue"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.arya.risetinformatika.views.CustomProgressButton
                android:id="@+id/btn_predict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="16dp"
                app:progress_button_title="@string/predict"
                app:progress_button_loading_title="@string/please_wait"
                app:layout_constraintTop_toBottomOf="@+id/layout_patient_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>