<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ic_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/patient"
        android:src="@drawable/ic_patient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/oswald_regular"
        android:letterSpacing="0.02"
        android:text="@string/dummy_patient_name"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/ic_patient"
        app:layout_constraintBottom_toTopOf="@id/tv_diagnostic_result"
        app:layout_constraintStart_toEndOf="@id/ic_patient"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_diagnostic_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/oswald_regular"
        android:letterSpacing="0.02"
        android:text="@string/dummy_diagnostic_result"
        android:textColor="@color/dark_green"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_patient_name"
        app:layout_constraintBottom_toBottomOf="@id/ic_patient"
        app:layout_constraintStart_toEndOf="@id/ic_patient"/>

</androidx.constraintlayout.widget.ConstraintLayout>